# Quiz

./: CMakeLists.txt  Controller.cpp  Controller.h  Observer.cpp  Observer.h  Participant.cpp  Participant.h  ParticipantWindow.cpp  ParticipantWindow.h  ParticipantWindow.ui  Presenter.cpp  Presenter.h  Presenter.ui  Question.cpp  Question.h  Quiz.cpp  Quiz.h  Quiz.ui  Repository.cpp  Repository.h  Subject.cpp  Utils.cpp  Utils.h  main.cpp  participants.txt  questions.txt
